--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,21 +19,15 @@ jobs:
         free -m
         df -h
     
-    - name: run redis
+    - name: build image
       run: |
         DOCKER_BACKEND='industryessentials/ymir-backend:release-2.1.0'
         DOCKER_WEB='industryessentials/ymir-web:release-2.1.0'
         DEV_SOURCE_BACKEND_PIP='https://pypi.mirrors.ustc.edu.cn/simple'
         DEV_SOURCE_WEB_NPM='https://registry.npmmirror.com
         printf '\nin dev mode, building images.\n'
-        docker build \
-          -t ${DOCKER_BACKEND} \
-          --build-arg PIP_SOURCE=${DEV_SOURCE_BACKEND_PIP} \
-          https://github.com/IndustryEssentials/ymir.git#master:/ymir -f Dockerfile.backend
-        docker build \
-          -t ${DOCKER_WEB} \
-          --build-arg NPM_REGISTRY=${DEV_SOURCE_WEB_NPM} \
-          https://github.com/IndustryEssentials/ymir.git#master:/ymir/web
+        docker build -t ${DOCKER_BACKEND}   --build-arg PIP_SOURCE=${DEV_SOURCE_BACKEND_PIP} https://github.com/IndustryEssentials/ymir.git#master:/ymir -f Dockerfile.backend
+        docker build -t ${DOCKER_WEB}  --build-arg NPM_REGISTRY=${DEV_SOURCE_WEB_NPM}  https://github.com/IndustryEssentials/ymir.git#master:/ymir/web
 
     - name: save images 
       run: |
