--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,20 +21,16 @@ jobs:
     
     - name: build image
       run: |
-        DOCKER_BACKEND='industryessentials/ymir-backend:release-2.1.0'
-        DOCKER_WEB='industryessentials/ymir-web:release-2.1.0'
         DEV_SOURCE_BACKEND_PIP='https://pypi.mirrors.ustc.edu.cn/simple'
         DEV_SOURCE_WEB_NPM='https://registry.npmmirror.com
-        printf '\nin dev mode, building images.\n'
-        docker build -t ${DOCKER_BACKEND}   --build-arg PIP_SOURCE=${DEV_SOURCE_BACKEND_PIP} https://github.com/IndustryEssentials/ymir.git#master:/ymir -f Dockerfile.backend
-        docker build -t ${DOCKER_WEB}  --build-arg NPM_REGISTRY=${DEV_SOURCE_WEB_NPM}  https://github.com/IndustryEssentials/ymir.git#master:/ymir/web
+        printf 'in dev mode, building images'
+        docker build -t industryessentials/ymir-backend:release-2.1.0   --build-arg PIP_SOURCE=${DEV_SOURCE_BACKEND_PIP} https://github.com/IndustryEssentials/ymir.git#master:/ymir -f Dockerfile.backend
+        docker build -t industryessentials/ymir-web:release-2.1.0  --build-arg NPM_REGISTRY=${DEV_SOURCE_WEB_NPM}  https://github.com/IndustryEssentials/ymir.git#master:/ymir/web
 
     - name: save images 
       run: |
-        DOCKER_BACKEND='industryessentials/ymir-backend:release-2.1.0'
-        DOCKER_WEB='industryessentials/ymir-web:release-2.1.0'
-        docker save ${DOCKER_BACKEND} > ymir-backend.tar
-        docker save ${DOCKER_WEB} > ymir-web.tar
+        docker save industryessentials/ymir-backend:release-2.1.0 > ymir-backend.tar
+        docker save industryessentials/ymir-web:release-2.1.0 > ymir-web.tar
       
     - name: upload images
       uses: actions/upload-artifact@v2
