--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,8 @@ jobs:
     
     - name: build image
       run: |
-        docker build -t industryessentials/ymir-backend:release-2.1.0   --build-arg PIP_SOURCE=https://pypi.mirrors.ustc.edu.cn/simple https://github.com/IndustryEssentials/ymir.git#master:/ymir -f Dockerfile.backend
-        docker build -t industryessentials/ymir-web:release-2.1.0  --build-arg NPM_REGISTRY=https://registry.npmmirror.com  https://github.com/IndustryEssentials/ymir.git#master:/ymir/web
+        docker build -t industryessentials/ymir-backend:release-2.1.0   --build-arg PIP_SOURCE=https://pypi.mirrors.ustc.edu.cn/simple https://github.com/lszxyz/ymir.git#master:/ymir -f Dockerfile.backend
+        docker build -t industryessentials/ymir-web:release-2.1.0  --build-arg NPM_REGISTRY=https://registry.npmmirror.com  https://github.com/lszxyz/ymir.git#master:/ymir/web
 
     - name: save images 
       run: |
